# QRcodeScanner

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  WORKSPACE_VERIFIED.txt
.github/workflows/: phase-0.yml
apps/desktop/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: settings.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  diagnostics.rs  lib.rs  main.rs  notification.rs  runtime.rs  single_instance.rs  startup.rs  tray.rs  window.rs
apps/desktop/src/lib/: api.ts  hotkey.test.ts  hotkey.ts
cmake/: msvc-runtime.cmake
crates/qrforge-application/: Cargo.toml
crates/qrforge-application/src/: lib.rs  ports.rs  scan.rs  settings.rs
crates/qrforge-capture/: Cargo.toml
crates/qrforge-capture/src/: lib.rs
crates/qrforge-decoder/: Cargo.toml
crates/qrforge-decoder/src/: lib.rs
crates/qrforge-domain/: Cargo.toml
crates/qrforge-domain/src/: capture.rs  detection.rs  hotkey.rs  lib.rs  payload.rs  settings.rs
crates/qrforge-platform/: Cargo.toml
crates/qrforge-platform/src/: browser.rs  clipboard.rs  clock.rs  hotkey.rs  lib.rs
crates/qrforge-storage/: Cargo.toml
crates/qrforge-storage/src/: lib.rs
docs/: performance-budgets.md  phase-0-5-results.md  phase-0-results.md  phase-0.md  phase-1-results.md  threat-model.md
docs/adr/: 0001-desktop-stack.md  0002-clean-architecture.md  0003-offline-qr-decoder.md  0004-sqlite-history.md
spikes/: Cargo.toml  README.md
spikes/decoder/: Cargo.toml  README.md
spikes/decoder-comparison/: Cargo.toml  README.md
spikes/decoder-comparison/fixtures/: README.md
spikes/decoder-comparison/results/: latest-summary.json
spikes/decoder-comparison/src/: main.rs
spikes/decoder/src/: main.rs
spikes/tauri-idle/: README.md  measure.ps1
spikes/tauri-idle/results/: README.md  lifecycle.json
spikes/tauri-idle/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-idle/src-tauri/icons/: .gitignore
spikes/tauri-idle/src-tauri/src/: lifecycle.rs  main.rs
spikes/tauri-idle/ui/: index.html
spikes/webcam/: Cargo.toml  README.md
spikes/webcam/src/: main.rs
spikes/windows-capture/: Cargo.toml  README.md
spikes/windows-capture/src/: main.rs
spikes/windows-wgc/: Cargo.toml  README.md  animate.ps1  run.ps1
spikes/windows-wgc/results/: latest.json
spikes/windows-wgc/src/: main.rs
