[workspace]
resolver = "3"
members = [
  "windows-capture",
  "decoder",
  "webcam",
  "tauri-idle/src-tauri",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

