[package]
name = "qrforge-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
qrforge-domain.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
