[package]
name = "qrforge-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
qrforge-application.workspace = true
qrforge-domain.workspace = true
xcap = "=0.7.1"

[lints]
workspace = true
