[package]
name = "qrforge-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
url = "2.5"

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
