[package]
name = "qrforge-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
arboard = "3.6"
qrforge-application.workspace = true
qrforge-domain.workspace = true
tauri = "2"
tauri-plugin-global-shortcut = "2"
webbrowser = "1.0"

[lints]
workspace = true
