[package]
name = "qrforge-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
qrforge-application.workspace = true
qrforge-domain.workspace = true
serde_json = "1.0"
tempfile = "3.20"

[lints]
workspace = true
