[package]
name = "qrforge-webcam-spike"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nokhwa = { version = "0.10.11", default-features = false, features = ["input-msmf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

