[package]
name = "qrforge-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "qrforge_desktop_lib"
crate-type = ["rlib"]

[[bin]]
name = "qrforge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
qrforge-application.workspace = true
qrforge-capture.workspace = true
qrforge-decoder.workspace = true
qrforge-domain.workspace = true
qrforge-platform.workspace = true
qrforge-storage.workspace = true
serde.workspace = true
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

[lints]
workspace = true
